# zurich-opendata-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.de.md  CONTRIBUTING.md  CONTRIBUTING_DE.md  CONTRIBUTING_EN.md  DEPLOYMENT.md  Dockerfile  LICENSE  Procfile  README.de.md  README.md  README_DE.md  README_EN.md  claude_desktop_config.json  pyproject.toml  railway.toml  render.yaml  server.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
docs/: SECURITY-BASELINE.md
docs/audits/: 2026-06-27.md
src/zurich_opendata_mcp/: __init__.py  __main__.py  api_client.py  app.py  config.py  formatters.py  http_client.py  models.py  server.py
src/zurich_opendata_mcp/clients/: __init__.py  paris.py  sparql.py  tourism.py  wfs.py
src/zurich_opendata_mcp/tools/: __init__.py  catalog.py  datastore.py  geo.py  parliament.py  realtime.py  resources.py  sparql.py  strb.py  tourism.py
tests/: test_20_diverse.py  test_20_new_scenarios.py  test_20_scenarios.py  test_catalog.py  test_datastore.py  test_geo.py  test_helpers.py  test_integration.py  test_niche_scenarios.py  test_parliament.py  test_realtime.py  test_resources.py  test_scenarios.py  test_server.py  test_strb.py  test_tourism.py
