[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "zurich-opendata-mcp"
version     = "0.2.0"
description = "MCP Server for City of Zurich Open Data — 20 tools for CKAN, geodata, parliament, tourism, SPARQL, and real-time data across 6 APIs"
readme      = "README.md"
license     = { file = "LICENSE" }
requires-python = ">=3.11"

authors = [
    { name = "Schulamt Stadt Zürich" },
]

keywords = [
    "mcp", "model-context-protocol", "open-data", "zurich",
    "ckan", "stadt-zuerich", "geodata", "wfs", "sparql",
    "linked-data", "smart-city",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
]

[project.scripts]
zurich-opendata-mcp = "zurich_opendata_mcp.server:main"

[project.urls]
Homepage   = "https://github.com/malkreide/zurich-opendata-mcp"
Repository = "https://github.com/malkreide/zurich-opendata-mcp"
Issues     = "https://github.com/malkreide/zurich-opendata-mcp/issues"
Changelog  = "https://github.com/malkreide/zurich-opendata-mcp/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/zurich_opendata_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "-v --tb=short"
markers      = [
    "live: live API tests (skipped in CI by default)",
]

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
